tests/base/valid/ConstrainedRecord_Valid_4.whiley
define point as {int x, int y}

void System::main([string] args):
    p = {x:1,y:1}
    out<->println(str(p))
