tests/base/invalid/TupleDefine_CompileFail_1.whiley
define point as {real x,real y}

int f(int x):
    return x

void System::main([string] args):
     p = {x:1.0,y:2.23}
     x = f(p.y)
     out<->println(str(x))

